--- a/package.json
+++ b/package.json
@@ -9,18 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/backend": "^0.38.1",
     "@clerk/nextjs": "^4.29.7",
     "@neondatabase/serverless": "^0.8.1",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@tanstack/react-query": "^5.20.1",
+    "@tiptap/pm": "^2.2.2",
+    "@tiptap/react": "^2.2.2",
+    "@tiptap/starter-kit": "^2.2.2",
+    "ai": "^2.2.35",
     "axios": "^1.6.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "dotenv": "^16.4.2",
     "drizzle-kit": "^0.20.14",
     "drizzle-orm": "^0.29.3",
+    "firebase": "^10.8.0",
     "lucide-react": "^0.323.0",
     "next": "14.1.0",
     "openai-edge": "^1.2.2",
@@ -32,6 +38,7 @@
     "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.10",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
